html에 동영상 플레이어 삽입

--- a/applications/templates/index.html
+++ b/applications/templates/index.html
@@ -9,5 +9,6 @@
     </head>
     <body>
         <h1>hi</h1>
+        <video src="/static/video/IMG_1788.mov" width="1280px" height="720px"></video>
     </body>
 </html>
