--- a/applications/templates/index.html
+++ b/applications/templates/index.html
@@ -1,14 +1,13 @@
-<!doctype HTML>
+{% load static %}
+<!doctype html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta http-equiv="content-type" content="text/html; charset=utf-8">
         <title>흐르는 강물을 거슬러 오르는 자연어</title>
-        
-        <script>
-        </script>
     </head>
     <body>
-        <h1>hi</h1>
-        <video src="/static/video/IMG_1788.mov" width="1280px" height="720px"></video>
+        <video oncontextmenu="return false;" width="400px" height="300px" controls="controls">
+            <source src="/static/video/vivid.mp4" type="video/mp4"></source>
+        </video>
     </body>
 </html>
