--- a/applications/templates/base.html
+++ b/applications/templates/base.html
@@ -19,7 +19,7 @@
 
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:120px;" id="mySidebar"><br>
-  <div class="w3-container">
+  <div class="w3-container" style="margin-bottom: 10px;">
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
