--- a/applications/templates/intro.html
+++ b/applications/templates/intro.html
@@ -2,11 +2,14 @@
 
 {% block content %}
 <!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:120px;display:flex;justify-content:center;align-items:center;">
+<div class="w3-main" style="margin-left:120px;text-align: center;">
 
-  <p>
-  <p>
-  <p>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  
   <h1>Intro</h1>
 
   <!-- End page content -->
