--- a/applications/templates/prepare.html
+++ b/applications/templates/prepare.html
@@ -2,11 +2,14 @@
 
 {% block content %}
 <!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:120px;display:flex;justify-content:center;align-items:center;">
+<div class="w3-main" style="margin-left:120px;text-align: center;">
 
   <br>
   <br>
   <br>
+  <br>
+  <br>
+  
   <h1>준비 중입니다.</h1>
 
   <!-- End page content -->
