--- a/applications/templates/base.html
+++ b/applications/templates/base.html
@@ -27,11 +27,11 @@
   </div>
   <div class="w3-bar-block" sytle="text-ali">
     <a href="/tnt-nlp/about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i><br>소개</a> 
-    <a href="/tnt-nlp/preparing" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i><br>대시보드</a> 
-    <a href="/tnt-nlp/streaming" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i><br>과목</a>
-    <a href="/tnt-nlp/preparing" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i><br>캘린더</a>
-    <a href="/tnt-nlp/preparing" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i><br>메시지함</a>
-    <a href="/tnt-nlp/credit" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i><br>이용안내</a>
+    <a href="/tnt-nlp/preparing" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i><br>기술 스택</a> 
+    <a href="/tnt-nlp/streaming" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i><br>기능 구현</a>
+    <a href="/tnt-nlp/preparing" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i><br>진행 과정</a>
+    <a href="/tnt-nlp/preparing" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i><br>결과</a>
+    <a href="/tnt-nlp/credit" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i><br>크레딧</a>
   </div>
 </nav>
 
