--- a/applications/templates/intro.html
+++ b/applications/templates/intro.html
@@ -9,8 +9,14 @@
   <br>
   <br>
   <br>
-  
-  <h1>Intro</h1>
+  <h1>2020-1 Co-Deep Learning</h1>
+  <br>
+  <h1>< 자연어 처리를 활용한 온라인 강의 학습 보조 서비스 개발 ></h1>
+  <br>
+  <br>
+  <h1>지도교수 : 박은일</h1>
+  <br>
+  <h1>흐르는 강물을 거슬러 오르는 자연어</h1>
 
   <!-- End page content -->
 </div>
