html 레이아웃(streaming.html)

--- a/applications/templates/streaming.html
+++ b/applications/templates/streaming.html
@@ -7,18 +7,21 @@
         header
     </div>
     
-    <div id="vands" style="margin-left:30px;border:1px solid black;">  <!--display:inline-block-->
-        <div id="videoArea">
-            <video oncontextmenu="return false;" width="800px" height="600px" controls="controls">
+    <div id="vands" style="margin-left:30px;border:1px solid black;width:100%">  <!--display:inline-block-->
+        <div id="videoArea" style="display:inline-block;width:60%;">
+            <video oncontextmenu="return false;" width="100%" controls="controls">
                 <source src="/static/video/vivid.mp4" type="video/mp4"></source>
             </video>
         </div>
-        <div id="scriptArea" style="display: inline-block ;width:400px;height:300px;">
-            script AREA;
-            </div>
+        <div id="scriptArea" style="display:inline-block;width:30%;margin-left:1%;">
+            <p>스</p>
+            <p>크</p>
+            <p>립</p>
+            <p>트</p>
+        </div>
     </div>
 
-    <div id="summaryArea" style="border:1px solid black">
+    <div id="summaryArea" style="border:1px solid black;">
         summary
     </div>
 </div>
