--- a/applications/templates/base.html
+++ b/applications/templates/base.html
@@ -29,7 +29,7 @@
     <a href="/tnt-nlp/about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i><br>소개</a> 
     <a href="/tnt-nlp/preparing" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i><br>기술 스택</a> 
     <a href="/tnt-nlp/streaming" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i><br>기능 구현</a>
-    <a href="/tnt-nlp/preparing" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i><br>코넬식 노트</a>
+    <a href="/tnt-nlp/cornell" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i><br>코넬식 노트</a>
     <a href="/tnt-nlp/preparing" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i><br>결과</a>
     <a href="/tnt-nlp/credit" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i><br>크레딧</a>
   </div>
