--- a/applications/templates/cornell.html
+++ b/applications/templates/cornell.html
@@ -9,8 +9,13 @@
   <br>
   <br>
   <br>
-  
-  <h1>준비 중입니다!</h1>
+  <h1>2020-1 Co-Deep Learning</h1>
+  <br>
+  <h1>코넬식노트</h1>
+  <br>
+  <br>
+  <br>
+  <h1>흐르는 강물을 거슬러 오르는 자연어</h1>
 
   <!-- End page content -->
 </div>
