--- a/applications/static/css/style.css
+++ b/applications/static/css/style.css
@@ -27,6 +27,26 @@
     display: inline-block;
 }
 
+#main-line{
+    border: 0.1px solid;
+    color: black;
+    margin-top: 30px;
+}
+#main-line2{
+    border: 2px solid;
+    color: black;
+    margin-top: 30px;
+}
+
+#vertical-line{
+    width: 3px; /* Line width */
+    background-color: black; /* Line color */
+    height: 100%; /* Override in-line if you want specific height. */
+    float: left; /* Causes the line to float to left of content. 
+      You can instead use position:absolute or display:inline-block
+      if this fits better with your design */
+    margin-left: 200px;
+  }
 body {
     margin:0;
 }
