--- a/applications/templates/cornell.html
+++ b/applications/templates/cornell.html
@@ -2,6 +2,9 @@
 
 {% block content %}
 <!-- !PAGE CONTENT! -->
+  
+  
+
 <div class="w3-main" style="margin-left:120px;text-align: center;">
 
   <br>
@@ -9,13 +12,31 @@
   <br>
   <br>
   <br>
-  <h1>2020-1 Co-Deep Learning</h1>
+  <h1>노트정리 페이지</h1>
   <br>
-  <h1>코넬식노트</h1>
+  <div id="vertical-line" style="height: 500px;"></div>
+  <div style="border:1px solid; padding:10px; background-color: beige; height: 500px; max-width: 1200px;">
+    <h2 style="margin-left: 200px; text-align: left;">1강.바보온달과 평강공주</h2>
+    <hr id="main-line2">
+    <hr id="main-line"> 
+    <hr id="main-line">
+    <hr id="main-line">
+    <hr id="main-line">
+    <hr id="main-line">
+    <hr id="main-line">
+    <hr id="main-line">
+    <hr id="main-line">
+    <hr id="main-line">
+    <hr id="main-line2">
+    </div>
+
+
+
+
   <br>
   <br>
   <br>
-  <h1>흐르는 강물을 거슬러 오르는 자연어</h1>
+  <h4>흐르는 강물을 거슬러 오르는 자연어</h4>
 
   <!-- End page content -->
 </div>
