--- a/applications/templates/result.html
+++ b/applications/templates/result.html
@@ -10,7 +10,11 @@
   <br>
   <br>
   
-  <h1>준비 중입니다!</h1>
+  <h1>결과</h1>
+
+<pre>
+1. 기대효과, 시사점 및 한계
+</pre>
 
   <!-- End page content -->
 </div>
