--- a/applications/templates/about.html
+++ b/applications/templates/about.html
@@ -11,7 +11,14 @@
   <br>
   
   <h1>소개</h1>
+  <pre>
 
+1. 계획서에 작성했던 동기, 시장성, 유사 기술, 기대효과 명시
+
+2. 기술 스택 구조도 작성
+
+3. 기능 구현 설명
+  </pre>
   <!-- End page content -->
 </div>
 {% endblock %}
