--- a/applications/templates/cornell.html
+++ b/applications/templates/cornell.html
@@ -8,16 +8,17 @@
 <div class="w3-main" style="margin-left:120px;text-align: center;">
 
   <br>
-  <br>
-  <br>
-  <br>
-  <br>
   <h1>노트정리 페이지</h1>
   <br>
-  <div id="vertical-line" style="height: 500px;"></div>
-  <div style="border:1px solid; padding:10px; background-color: beige; height: 500px; max-width: 1200px;">
+  <h3 style="margin-left:40px; margin-top: 30px; z-index: 1; position: absolute;">
+    <br>
+    <br><mark><b>keyword1
+    <br>keyword2
+    <br>keyword3</mark></b></h3>
+  <div id="vertical-line" style="height: 460px; margin-top: 20px; margin-bottom: 20px;"> </div>
+  <div style="border:1px solid; padding:20px; background-color: beige; height: 500px; max-width: 1200px;">
     <h2 style="margin-left: 200px; text-align: left;">1강.바보온달과 평강공주</h2>
-    <hr id="main-line2">
+    <hr id="main-line2"style="margin-top:5px">
     <hr id="main-line"> 
     <hr id="main-line">
     <hr id="main-line">
@@ -27,7 +28,8 @@
     <hr id="main-line">
     <hr id="main-line">
     <hr id="main-line">
-    <hr id="main-line2">
+    <hr id="main-line2" style="margin-bottom:2px;">
+    <h3 style="margin-left: 200px; text-align: left; margin-top:0px;">한줄정리를 해주자면 이러이러이러하다!</h3>
     </div>
 
 
