--- a/applications/static/css/style.css
+++ b/applications/static/css/style.css
@@ -29,24 +29,36 @@
 
 #main-line{
     border: 0.1px solid;
-    color: black;
+    color:  rgb(53, 53, 53);
     margin-top: 30px;
+    position: absolute;
+    z-index: -1;
 }
 #main-line2{
     border: 2px solid;
-    color: black;
+    color: rgb(53, 53, 53);
     margin-top: 30px;
+    position: absolute;
+    z-index: -1;
 }
 
 #vertical-line{
     width: 3px; /* Line width */
-    background-color: black; /* Line color */
+    background-color:  rgb(53, 53, 53); /* Line color */
     height: 100%; /* Override in-line if you want specific height. */
     float: left; /* Causes the line to float to left of content. 
       You can instead use position:absolute or display:inline-block
       if this fits better with your design */
-    margin-left: 200px;
+    margin-right: 1100px;
+    position: absolute;
+    z-index: -1;
   }
+mark{
+    font-weight:bold;
+
+    background-color:rgba(255,0,0,0.2);
+
+}
 body {
     margin:0;
 }
