--- a/applications/templates/cornellDetail.html
+++ b/applications/templates/cornellDetail.html
@@ -10,22 +10,21 @@
   <br>
   
   <h1>노트정리 페이지</h1>
-  <br>
-  <div id="vertical-line" style="height: 500px;"></div>
-  <div style="border:1px solid; padding:10px; background-color: beige; height: 500px; max-width: 1200px;">
-    <h2 style="margin-left: 200px; text-align: left;">1강.바보온달과 평강공주</h2>
-    <hr id="main-line2">
-    <hr id="main-line"> 
-    <hr id="main-line">
-    <hr id="main-line">
-    <hr id="main-line">
-    <hr id="main-line">
-    <hr id="main-line">
-    <hr id="main-line">
-    <hr id="main-line">
-    <hr id="main-line">
-    <hr id="main-line2">
-    </div>
+
+  <div>
+    <table border="2px" style="background-color: beige; border: solid 2px; border-color: black; border-collapse: collapse; width: 1200px; height: 600px;">
+      <th width="200px" height="100px"></th>
+      <th style="font-size:30px; text-align: left; padding-left: 20px;">1. 온달장군과 평강공주</th>
+      <tr><!-- 첫번째 줄 시작 -->
+          <td style="font-size: 20px; font-weight: bold; vertical-align: text-top;"> keyword1 <br> keyword2 <br>keyword3</td>
+          <td></td>
+      </tr><!-- 첫번째 줄 끝 -->
+      <tr><!-- 두번째 줄 시작 -->
+          <td></td>
+          <td style="font-size: 30px; height: 100px; padding-left: 20px; text-align: left;">한줄요약 내용</td>
+      </tr><!-- 두번째 줄 끝 -->
+        </table>
+      </div>
 
 
 
