--- a/applications/templates/cornellDetail.html
+++ b/applications/templates/cornellDetail.html
@@ -6,10 +6,7 @@
   
 
 <div class="w3-main" style="margin-left:120px;text-align: center;">
-
-  <br>
-  
-  <h1>노트정리 페이지</h1>
+<br>
 
   <div>
     <table border="2px" style="background-color: beige; border: solid 2px; border-color: black; border-collapse: collapse; width: 1200px; height: 600px;">
@@ -30,7 +27,8 @@
 
 
   <br>
-    <a href="detail">저장하기</a>
+  <input type="button" value="저장하기" onClick="location.href='detail'">
+
 
   <!-- End page content -->
 </div>
