--- a/applications/templates/cornell.html
+++ b/applications/templates/cornell.html
@@ -7,9 +7,7 @@
 
 <div class="w3-main" style="margin-left:120px;text-align: center;">
 
-  <br>
   
-  <h1>노트정리 페이지</h1>
   <br>
   <!--
   <div id="vertical-line" style="height: 500px;"></div>
@@ -43,10 +41,10 @@
       </div>
 
 
-
-
   <br>
-    <a href="detail">수정하기</a>
+    <input type="button" value="수정하기" onClick="location.href='detail'">
+    <button>키워드보여주기</button>
+    <button>요약보여주기</button>
 
   <!-- End page content -->
 </div>
