--- a/applications/templates/cornell.html
+++ b/applications/templates/cornell.html
@@ -9,29 +9,15 @@
 
   
   <br>
-  <!--
-  <div id="vertical-line" style="height: 500px;"></div>
-  <div style="border:1px solid; padding:10px; background-color: beige; height: 500px; max-width: 1200px;">
-    <h2 style="margin-left: 200px; text-align: left;">1강.바보온달과 평강공주</h2>
-    <hr id="main-line2">
-    <hr id="main-line"> 
-    <hr id="main-line">
-    <hr id="main-line">
-    <hr id="main-line">
-    <hr id="main-line">
-    <hr id="main-line">
-    <hr id="main-line">
-    <hr id="main-line">
-    <hr id="main-line">
-    <hr id="main-line2">
-    </div>-->
     <div>
     <table border="2px" style="background-color: beige; border: solid 2px; border-color: black; border-collapse: collapse; width: 1200px; height: 600px;">
       <th width="200px" height="100px"></th>
       <th style="font-size:30px; text-align: left; padding-left: 20px;">1. 온달장군과 평강공주</th>
       <tr><!-- 첫번째 줄 시작 -->
-          <td style="font-size: 20px; font-weight: bold; vertical-align: text-top;"> keyword1 <br> keyword2 <br>keyword3</td>
-          <td></td>
+          <td style="font-size: 25px; font-weight: bold; vertical-align: text-top; text-align: center;"> keyword1 <br> keyword2 <br>keyword3</td>
+          <td>
+            <textarea placeholder="수업을 들으며 여기에 필기하세요" style="padding:10px; width:100%; height: 100%; background-color: beige; border: 0px; vertical-align: top; word-wrap: hard; Word-wrap: break-Word; Word-break: break-all;"></textarea>
+        </td>
       </tr><!-- 첫번째 줄 끝 -->
       <tr><!-- 두번째 줄 시작 -->
           <td></td>
@@ -42,9 +28,9 @@
 
 
   <br>
-    <input type="button" value="수정하기" onClick="location.href='detail'">
-    <button>키워드보여주기</button>
-    <button>요약보여주기</button>
+    <input type="button" value="수정하기" onClick="location.href='detail'" style="width: 150px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
+    <input type="button" value="키워드 보여주하기" onClick="location.href='#'" style="width: 150px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
+    <input type="button" value="요약 보여주기" onClick="location.href='#'" style="width: 150px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
 
   <!-- End page content -->
 </div>
