--- a/applications/templates/cornellDetail.html
+++ b/applications/templates/cornellDetail.html
@@ -8,26 +8,27 @@
 <div class="w3-main" style="margin-left:120px;text-align: center;">
 <br>
 
-  <div>
-    <table border="2px" style="background-color: beige; border: solid 2px; border-color: black; border-collapse: collapse; width: 1200px; height: 600px;">
-      <th width="200px" height="100px"></th>
-      <th style="font-size:30px; text-align: left; padding-left: 20px;">1. 온달장군과 평강공주</th>
-      <tr><!-- 첫번째 줄 시작 -->
-          <td style="font-size: 20px; font-weight: bold; vertical-align: text-top;"> keyword1 <br> keyword2 <br>keyword3</td>
-          <td></td>
-      </tr><!-- 첫번째 줄 끝 -->
-      <tr><!-- 두번째 줄 시작 -->
-          <td></td>
-          <td style="font-size: 30px; height: 100px; padding-left: 20px; text-align: left;">한줄요약 내용</td>
-      </tr><!-- 두번째 줄 끝 -->
-        </table>
-      </div>
-
+<div>
+  <table border="2px" style="background-color: beige; border: solid 2px; border-color: black; border-collapse: collapse; width: 1200px; height: 600px;">
+    <th width="200px" height="100px"></th>
+    <th style="font-size:30px; text-align: left; padding-left: 20px;">1. 온달장군과 평강공주</th>
+    <tr><!-- 첫번째 줄 시작 -->
+        <td style="font-size: 25px; font-weight: bold; vertical-align: text-top; text-align: center;"> keyword1 <br> keyword2 <br>keyword3</td>
+        <td>
+          <textarea placeholder="수업을 들으며 여기에 필기하세요" style="padding:10px; width:100%; height: 100%; background-color: beige; border: 0px; vertical-align: top; word-wrap: hard; Word-wrap: break-Word; Word-break: break-all;"></textarea>
+        </td>
+    </tr><!-- 첫번째 줄 끝 -->
+    <tr><!-- 두번째 줄 시작 -->
+        <td></td>
+        <td style="font-size: 30px; height: 100px; padding-left: 20px; text-align: left;">한줄요약 내용</td>
+    </tr><!-- 두번째 줄 끝 -->
+      </table>
+    </div>
 
 
 
   <br>
-  <input type="button" value="저장하기" onClick="location.href='detail'">
+  <input type="button" value="저장하기" onClick="location.href='detail'" style="width: 150px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
 
 
   <!-- End page content -->
