--- a/applications/templates/cornell.html
+++ b/applications/templates/cornell.html
@@ -3,25 +3,29 @@
 {% block content %}
 <!-- !PAGE CONTENT! -->
   
-  
+
 
 <div class="w3-main" style="margin-left:120px;text-align: center;">
-
+  <!-- {% for mynote in mynotes.all %}
+      <h1>{{ mynote.title }}</h1>
+      <p>{{ mynote.keyword }}</p>
+      <p>{{ mynote.content }}</p>
+{% endfor %}-->
   
   <br>
     <div>
     <table border="2px" style="background-color: beige; border: solid 2px; border-color: black; border-collapse: collapse; width: 1200px; height: 600px;">
       <th width="200px" height="100px"></th>
-      <th style="font-size:30px; text-align: left; padding-left: 20px;">1. 온달장군과 평강공주</th>
+      <th style="font-size:30px; text-align: left; padding-left: 20px;"> {{ mynotes.first.title }} </th>
       <tr><!-- 첫번째 줄 시작 -->
-          <td style="font-size: 25px; font-weight: bold; vertical-align: text-top; text-align: center;"> keyword1 <br> keyword2 <br>keyword3</td>
+          <td style="font-size: 25px; font-weight: bold; vertical-align: text-top; text-align: center;"> {{ mynotes.first.keyword1 }} <br> {{ mynotes.first.keyword2 }} <br>{{ mynotes.first.keyword3 }}</td>
           <td>
-            <textarea placeholder="수업을 들으며 여기에 필기하세요" style="padding:10px; width:100%; height: 100%; background-color: beige; border: 0px; vertical-align: top; word-wrap: hard; Word-wrap: break-Word; Word-break: break-all;"></textarea>
+            <textarea placeholder="수업을 들으며 여기에 필기하세요" style="padding:10px; width:100%; height: 100%; background-color: beige; border: 0px; vertical-align: top; word-wrap: hard; Word-wrap: break-Word; Word-break: break-all;">{{ mynotes.first.content }}</textarea>
         </td>
       </tr><!-- 첫번째 줄 끝 -->
       <tr><!-- 두번째 줄 시작 -->
           <td></td>
-          <td style="font-size: 30px; height: 100px; padding-left: 20px; text-align: left;">한줄요약 내용</td>
+          <td style="font-size: 30px; height: 100px; padding-left: 20px; text-align: left;">{{ mynotes.first.summary }}</td>
       </tr><!-- 두번째 줄 끝 -->
         </table>
       </div>
@@ -29,8 +33,9 @@
 
   <br>
     <input type="button" value="수정하기" onClick="location.href='detail'" style="width: 150px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
-    <input type="button" value="키워드 보여주하기" onClick="location.href='#'" style="width: 150px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
+    <input type="button" value="키워드 보여주기" onClick="location.href='#'" style="width: 150px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
     <input type="button" value="요약 보여주기" onClick="location.href='#'" style="width: 150px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
+
 
   <!-- End page content -->
 </div>
