--- a/applications/templates/cornellDetail.html
+++ b/applications/templates/cornellDetail.html
@@ -3,6 +3,7 @@
 {% block content %}
 <!-- !PAGE CONTENT! -->
   
+{{ mynotes.all }}
   
 
 <div class="w3-main" style="margin-left:120px;text-align: center;">
