--- a/applications/templates/cornellDetail.html
+++ b/applications/templates/cornellDetail.html
@@ -8,20 +8,36 @@
 
 <div class="w3-main" style="margin-left:120px;text-align: center;">
 <br>
-
+<form method="POST" action="{%url 'update'%}"
+{% csrf_token %}
 <div>
   <table border="2px" style="background-color: beige; border: solid 2px; border-color: black; border-collapse: collapse; width: 1200px; height: 600px;">
     <th width="200px" height="100px"></th>
-    <th style="font-size:30px; text-align: left; padding-left: 20px;">1. 온달장군과 평강공주</th>
+    <th style="font-size:30px; text-align: left;">
+      <input type="text" style="width:1000px; height:100px; background-color: beige; border : 0px;" name="title" value="1. 온달장군과 평강공주">
+    </th>
     <tr><!-- 첫번째 줄 시작 -->
-        <td style="font-size: 25px; font-weight: bold; vertical-align: text-top; text-align: center;"> keyword1 <br> keyword2 <br>keyword3</td>
+        <td style="font-size: 25px; font-weight: bold; vertical-align: text-top; text-align: center;">
+          <br>
+          <input type="text" style="width:160px; background-color: beige; border : 0px;" name="k1" value="keyword 1">
+          <br><br>
+          <input type="text" style="width:160px; background-color: beige; border : 0px;" name="k2" value="keyword 2">
+          <br><br>
+          <input type="text" style="width:160px; background-color: beige; border : 0px;" name="k3" value="keyword 3">
+          <br><br>
+          <input type="text" style="width:160px; background-color: beige; border : 0px;" name="k4" value="keyword 4">
+          <br><br>
+          <input type="text" style="width:160px; background-color: beige; border : 0px;" name="k5" value="keyword 5">
         <td>
-          <textarea placeholder="수업을 들으며 여기에 필기하세요" style="padding:10px; width:100%; height: 100%; background-color: beige; border: 0px; vertical-align: top; word-wrap: hard; Word-wrap: break-Word; Word-break: break-all;"></textarea>
+          <textarea name="note"style="padding:20px; width:100%; height: 100%; background-color: beige; border: 0px; vertical-align: top; word-wrap: hard; Word-wrap: break-Word; Word-break: break-all;">수업을 들으며 여기에 필기하세요</textarea>
         </td>
     </tr><!-- 첫번째 줄 끝 -->
     <tr><!-- 두번째 줄 시작 -->
         <td></td>
-        <td style="font-size: 30px; height: 100px; padding-left: 20px; text-align: left;">한줄요약 내용</td>
+        <td style="font-size: 30px; height: 100px; text-align: left;">
+          <input type="text" style="width:1000px; height:100px; background-color: beige; border : 0px;" name="summary" value="요약">
+    
+        </td>
     </tr><!-- 두번째 줄 끝 -->
       </table>
     </div>
@@ -29,7 +45,7 @@
 
 
   <br>
-  <input type="button" value="저장하기" onClick="location.href='detail'" style="width: 150px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
+  <input type="submit" value="저장하기" onClick="" style="width: 150px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
 
 
   <!-- End page content -->
