--- a/applications/templates/cornellDetail.html
+++ b/applications/templates/cornellDetail.html
@@ -8,7 +8,7 @@
 
 <div class="w3-main" style="margin-left:120px;text-align: center;">
 <br>
-<form method="POST" action="{%url 'update'%}"
+<form method="POST" action="{%url 'update'%}">
 {% csrf_token %}
 <div>
   <table border="2px" style="background-color: beige; border: solid 2px; border-color: black; border-collapse: collapse; width: 1200px; height: 600px;">
@@ -46,7 +46,7 @@
 
   <br>
   <input type="submit" value="저장하기" onClick="" style="width: 150px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
-
+</form>
 
   <!-- End page content -->
 </div>
