--- a/applications/templates/base.html
+++ b/applications/templates/base.html
@@ -28,12 +28,12 @@
     <a href="/tnt-nlp"><img src="/static/img/SymbolMark.jpg" width=80px height=80px></a>
   </div>
   <div class="w3-bar-block" sytle="text-ali">
-    <a href="/tnt-nlp/about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i><br>소개</a> 
-    <a href="/tnt-nlp/function" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i><br>기능 구현</a> 
-    <a href="/tnt-nlp/streaming" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i><br>프로토타입</a>
-    <a href="/tnt-nlp/cornell" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i><br>코넬식 노트</a>
-    <a href="/tnt-nlp/result" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i><br>결과</a>
-    <a href="/tnt-nlp/credit" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i><br>크레딧</a>
+    <a href="/about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i><br>소개</a> 
+    <a href="/function" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i><br>기능 구현</a> 
+    <a href="/streaming" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i><br>프로토타입</a>
+    <a href="/cornell" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i><br>코넬식 노트</a>
+    <a href="/result" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i><br>결과</a>
+    <a href="/credit" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i><br>크레딧</a>
   </div>
 </nav>
 
