--- a/applications/templates/update.html
+++ b/applications/templates/update.html
@@ -1,2 +1,2 @@
 <script>alert("성공적으로 수정되었습니다.")</script>
-<script>location.href="/tnt-nlp/cornell"</script>
+<script>location.href="/cornell"</script>
