--- a/applications/templates/streaming.html
+++ b/applications/templates/streaming.html
@@ -7,10 +7,10 @@
         header
     </div>
     
-    <div id="vands" style="margin-left:30px;border:1px solid black;width:100%">  <!--display:inline-block-->
+    <div id="vands" style="margin-left:30px;border:1px solid black;width:100%">
         <div id="videoArea" style="display:inline-block;width:60%;">
-            <video id="myVideo" oncontextmenu="return false;" width="100%" controls autoplay>
-                <source src="/static/video/vivid.mp4" type="video/mp4"></source>
+            <video id="myVideo" oncontextmenu="return false;" width="100%" controls autoplay
+                src="/static/video/vivid.mp4" type="video/mp4">
             </video>
         </div>
         <div id="scriptArea" style="display:inline-block;width:30%;margin-left:1%;">
