--- a/applications/templates/base.html
+++ b/applications/templates/base.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-  
+    <link href="/static/img/favicon.ico" rel="icon" type="image/x-icon" />
+    <script src="/static/js/jquery-3.5.1.js"></script>
+    <script src="/static/js/videojs.js"></script>
 
     <style>
       body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
@@ -25,7 +27,7 @@
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <a href="/tnt-nlp"><img src="/static/img/SymbolMark.jpg" width=80px height=80px></a>
+    <a href="/"><img src="/static/img/SymbolMark.jpg" width=80px height=80px></a>
   </div>
   <div class="w3-bar-block" sytle="text-ali">
     <a href="/about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i><br>소개</a> 
