--- a/applications/static/css/style.css
+++ b/applications/static/css/style.css
@@ -1,3 +1,6 @@
+@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+@import url(http://fonts.googleapis.com/earlyaccess/hanna.css);
+
 #navigation{
     background-color: navy;
     width:10%;
@@ -66,4 +69,8 @@
 }
 body {
     margin:0;
+}
+
+h2 {
+    font-family: 'Hanna';
 }
