--- a/applications/templates/base.html
+++ b/applications/templates/base.html
@@ -9,13 +9,11 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="/static/css/style.css">
     <link href="/static/img/favicon.ico" rel="icon" type="image/x-icon" />
-    <script src="/static/js/jquery-3.5.1.js"></script>
-    <script src="/static/js/videojs.js"></script>
 
     <style>
-      body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+      body,h1,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </style>
   </head>
   
