코넬식 노트 좌측 마진 삽입

--- a/applications/templates/cornell.html
+++ b/applications/templates/cornell.html
@@ -13,7 +13,7 @@
 {% endfor %}-->
   
   <br>
-    <div>
+    <div style="margin-left:50px;">
     <table border="2px" style="background-color: beige; border: solid 2px; border-color: black; border-collapse: collapse; width: 1200px; height: 600px;">
       <th width="200px" height="100px"></th>
       <th style="font-size:30px; text-align: left; padding-left: 20px;">
