--- a/applications/templates/cornellDetail.html
+++ b/applications/templates/cornellDetail.html
@@ -9,7 +9,7 @@
 <br>
 <form method="POST" action="{%url 'update'%}">
 {% csrf_token %}
-<div>
+<div style="margin-left:50px;">
   <table border="2px" style="background-color: beige; border: solid 2px; border-color: black; border-collapse: collapse; width: 1200px; height: 600px;">
     <th width="200px" height="100px"></th>
     <th style="font-size:30px; text-align: left;">
