--- a/applications/templates/streaming.html
+++ b/applications/templates/streaming.html
@@ -7,6 +7,7 @@
     </div>
     
     {% comment %} 학습하기 {% endcomment %}
+    <a name="top">
     <div id="playerArea" style="margin-left:30px;margin-right:30px;width:80%;margin-bottom:50px;">
         <h2>학습하기</h2>
         {% comment %} 동영상 플레이어 {% endcomment %}
@@ -16,6 +17,7 @@
             </video>
         </div>
     </div>
+    </a>
 
     {% comment %} 스크립트 {% endcomment %}
     <div id="scriptArea" style="margin-left:30px;margin-right:30px;width:100%; margin-bottom:50px;">
@@ -35,33 +37,102 @@
     </div>
 
     {% comment %} 퀴즈 {% endcomment %}
-    <div id="quizArea" style="margin-left:30px;margin-right:30px;width:100%; margin-bottom:50px;">
+    <div id="quizArea" style="margin-left:30px;margin-right:30px;width:100%; margin-bottom:80px;">
         <h2>퀴즈</h2>
-        <button type="button" onclick="moveTime()">20초로 이동하기</button>
-        <br>
-        summary
-        <br>
+        <div id='quizSlide1' style="margin-bottom:15px;">
+            <table width="400px" height="300px" cellspacing="5" style="fond-family:'Nanum Gothic'; text-align:center; border:1px solid black;">
+                <tr height="100px">
+                    <th colspan="2" bgcolor="#d5e8bb">keyword : 피자</th>
+                </tr>
+                <tr>
+                    <td bgcolor="#d5e8bb" width="100px">
+                        <a href="#top" onclick="moveTime('quiz1');">00:20</a>
+                    </td>
+                    <td>
+                        <a onclick="questionToggle('quiz1');">
+                            <div id='quizDiv1' style="background-color:#d5e8bb; width:100%; height:100%; line-height: 200px;";>
+                                피자는 어디서 처음으로?
+                            </div>
+                        </a>
+                        <a onclick="questionToggle('quiz1');">
+                            <div id='ansDiv1' style="background-color:#adbc98; width:100%; height:100%; display:none;  line-height: 200px;";>
+                                이탈리아
+                            </div>
+                        </a>
+                    </td>
+                </tr>
+            </table>
+        </div>
+
+        <div id='quizSlide2' style="margin-bottom:15px;">
+            <table width="400px" height="300px" cellspacing="5" style="fond-family:'Nanum Gothic'; text-align:center; border:1px solid black;">
+                <tr height="100px">
+                    <th colspan="2" bgcolor="#d5e8bb">keyword : 치킨</th>
+                </tr>
+                <tr>
+                    <td bgcolor="#d5e8bb" width="100px">
+                        <a href="#top" onclick="moveTime('quiz2');">00:41</a>
+                    </td>
+                    <td>
+                        <a onclick="questionToggle('quiz2');">
+                            <div id='quizDiv2' style="background-color:#d5e8bb; width:100%; height:100%; line-height: 200px;";>
+                                치킨은?
+                            </div>
+                        </a>
+                        <a onclick="questionToggle('quiz2');">
+                            <div id='ansDiv2' style="background-color:#adbc98; width:100%; height:100%; display:none;  line-height: 200px;";>
+                                교촌 치킨
+                            </div>
+                        </a>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        
     </div>
 </div>
 
 <script>
-function moveTime() {
-    var myVideo = document.getElementById("myVideo");
-    myVideo.currentTime = 20;
-}
-
-function scriptToggle() {
-    var scBtn = document.getElementById('scriptBtn')
-    var sc = document.getElementById('scriptValue').style;
-
-    if (sc.display === "none") {
-        sc.display = "block";
-        scBtn.innerText = "스크립트 닫기";
-    } else {
-        sc.display = "none";
-        scBtn.innerText = "스크립트 열기";
+    function moveTime(timestamp) {
+        if (timestamp === 'quiz1'){
+            var time = 20;
+        } else if (timestamp === 'quiz2') {
+            var time = 41;
+        }
+        var myVideo = document.getElementById("myVideo");
+        myVideo.currentTime = time;
     }
-}
+
+    function scriptToggle() {
+        var scBtn = document.getElementById('scriptBtn')
+        var sc = document.getElementById('scriptValue').style;
+
+        if (sc.display === "none") {
+            sc.display = "block";
+            scBtn.innerText = "스크립트 닫기";
+        } else {
+            sc.display = "none";
+            scBtn.innerText = "스크립트 열기";
+        }
+    }
+
+    function questionToggle(quesName) {
+        if (quesName === 'quiz1') {
+            var q = document.getElementById('quizDiv1').style;
+            var a = document.getElementById('ansDiv1').style;
+        } else if (quesName === 'quiz2') {
+            var q = document.getElementById('quizDiv2').style;
+            var a = document.getElementById('ansDiv2').style;
+        }
+
+        if (q.display === 'block') {
+            q.display = 'none';
+            a.display = 'block';
+        } else {
+            q.display = 'block';
+            a.display = 'none';
+        }
+    }
 </script>
     
 <!-- End page content -->
