타임스태프 이동 시 자동재생

--- a/applications/templates/streaming.html
+++ b/applications/templates/streaming.html
@@ -101,6 +101,7 @@
         }
         var myVideo = document.getElementById("myVideo");
         myVideo.currentTime = time;
+        myVideo.play();
     }
 
     function scriptToggle() {
