--- a/applications/templates/cornell.html
+++ b/applications/templates/cornell.html
@@ -59,8 +59,8 @@
 
   <br>
     <input type="button" value="수정하기" onClick="location.href='detail'" style="width: 150px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
-    <input type="button" value="키워드 보여주기" onClick="modalKeyword()" style="width: 180px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
-    <input type="button" value="요약 보여주기" onClick="modalSummary()" style="width: 150px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
+    <input type="button" value="키워드 & 요약" onClick="modalKeyword()" style="width: 180px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
+    <input type="button" value="다운받기" onClick="location.href='download'" style="width: 150px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
 
 
   <!-- End page content -->
@@ -68,11 +68,7 @@
 
 <script>
 function modalKeyword() {
-  alert("키워드 모달");
-}
-
-function modalSummary() {
-  alert("요약 모달");
+  alert("키워드 & 요약 modal");
 }
 </script>
 
