--- a/applications/templates/base.html
+++ b/applications/templates/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
     <link href="/static/img/favicon.ico" rel="icon" type="image/x-icon" />
+    <script src="/static/js/source.js"></script>
 
     <style>
       body,h1,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
