사이드바 메뉴 정리

--- a/applications/templates/base.html
+++ b/applications/templates/base.html
@@ -21,20 +21,20 @@
   <body class="w3-light-grey w3-content" style="max-width:1600px">
 
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:120px;" id="mySidebar"><br>
+<nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:120px;background-color:#F1F1F1!important;" id="mySidebar"><br>
   <div class="w3-container" style="margin-bottom: 10px;">
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <a href="/"><img src="/static/img/SymbolMark.jpg" width=80px height=80px></a>
+    <div style="text-align:center">
+      <a href="/"><img src="/static/svg/SymbolMark.svg" width=48px height=48px></a>
+    </div>
   </div>
-  <div class="w3-bar-block" sytle="text-ali">
-    <a href="/about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i><br>소개</a> 
-    <a href="/function" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i><br>기능 구현</a> 
-    <a href="/streaming" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i><br>프로토타입</a>
-    <a href="/cornell" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i><br>코넬식 노트</a>
-    <a href="/result" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i><br>결과</a>
-    <a href="/credit" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i><br>크레딧</a>
+  <div class="w3-bar-block" sytle="text-ali;">
+    <a href="/about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="text-align:center;"><img src="/static/svg/intro.svg" width=60px height=60px></a> 
+    <a href="/function" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="text-align:center;"><img src="/static/svg/function.svg" width=60px height=60px></a> 
+    <a href="/streaming" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="text-align:center;"><img src="/static/svg/proto.svg" width=60px height=60px></a>
+    <a href="/cornell" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="text-align:center;"><img src="/static/svg/cornell.svg" width=60px height=60px></a>
   </div>
 </nav>
 
