--- a/applications/templates/cornell.html
+++ b/applications/templates/cornell.html
@@ -11,7 +11,32 @@
       <p>{{ mynote.keyword }}</p>
       <p>{{ mynote.content }}</p>
 {% endfor %}-->
-  
+
+
+
+
+<div class="modal" id="myModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>키워드: ㅇㅇㅇ</p>
+        <p>요약: ㅇㅇㅇ</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+        <!--<button type="button" class="btn btn-primary">Save changes</button>-->
+      </div>
+    </div>
+  </div>
+</div>
+
+
   <br>
     <div style="margin-left:50px;">
     <table border="2px" style="background-color: beige; border: solid 2px; border-color: black; border-collapse: collapse; width: 1200px; height: 600px;">
@@ -57,19 +82,21 @@
       </div>
 
 
+
   <br>
     <input type="button" value="수정하기" onClick="location.href='detail'" style="width: 150px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
-    <input type="button" value="키워드 & 요약" onClick="modalKeyword()" style="width: 180px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
+    <input type="button"  data-toggle="modal" data-target="#myModal" value="키워드 & 요약" onClick="modalKeyword()" style="width: 180px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
     <input type="button" value="다운받기" onClick="location.href='download'" style="width: 150px; background-color: rgb(214, 206, 255); font-size: 20px; border-radius: 10px; border-collapse: collapse">
 
 
   <!-- End page content -->
 </div>
 
+<!--
 <script>
 function modalKeyword() {
   alert("키워드 & 요약 modal");
 }
 </script>
-
+-->
 {% endblock %}
