--- a/applications/static/css/style.css
+++ b/applications/static/css/style.css
@@ -1,5 +1,7 @@
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 @import url(http://fonts.googleapis.com/earlyaccess/hanna.css);
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@100&display=swap');
+@import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap);
 
 #navigation{
     background-color: navy;
