--- a/applications/templates/base.html
+++ b/applications/templates/base.html
@@ -35,11 +35,11 @@
       <i class="fa fa-remove"></i>
     </a>
     <div style="text-align:center">
-      <a href="/"><img src="/static/svg/SymbolMark.svg" width=48px height=48px></a>
+      <img src="/static/svg/SymbolMark.svg" width=48px height=48px>
     </div>
   </div>
   <div class="w3-bar-block" sytle="text-ali;">
-    <a href="/about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="text-align:center;"><img src="/static/svg/intro.svg" width=60px height=60px></a> 
+    <a href="/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="text-align:center;"><img src="/static/svg/intro.svg" width=60px height=60px></a> 
     <a href="/function" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="text-align:center;"><img src="/static/svg/function.svg" width=60px height=60px></a> 
     <a href="/streaming" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="text-align:center;"><img src="/static/svg/proto.svg" width=60px height=60px></a>
     <a href="/cornell" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="text-align:center;"><img src="/static/svg/cornell.svg" width=60px height=60px></a>
